--- a/Desafios/Desafio012/pacote-d012/estilo/style.css
+++ b/Desafios/Desafio012/pacote-d012/estilo/style.css
@@ -49,6 +49,10 @@ section{
     padding-left: 30px;
 }
 
+section > p{
+    padding-bottom: 2em;
+}
+
 section.normal{
     background-color: white;
     color: black;
@@ -57,12 +61,28 @@ section.normal{
 section.imagem{
     background-color: rgb(41, 41, 41);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p{
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.322);
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01{
+background-image: url('../imagens/background001.jpg');
+background-position: right center;
+background-repeat: no-repeat;
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
+    background-repeat: no-repeat;
 }
 
 footer{
