--- a/exercicios/ex026/mq002/estilos/retrato.css
+++ b/exercicios/ex026/mq002/estilos/retrato.css
@@ -3,6 +3,6 @@
 body{
     background-image: url('../imagens/cev-portrait.jpg');
     background-repeat: no-repeat;
-    background-position: left bottom;
+    background-position: center bottom;
 }
 
