--- a/exercicios/ex026/mq004/estilos/media-queries.css
+++ b/exercicios/ex026/mq004/estilos/media-queries.css
@@ -1,1 +1,172 @@
 @charset "UTF-8";
+
+/* Retrato em dispositivos móveis: 320–480 pixels para smartphones no modo retrato
+Paisagem em dispositivos móveis: 481–600 pixels para smartphones no modo paisagem
+Retrato em tablets: 601–768 pixels para tablets no modo retrato
+Paisagem em tablets: 769–1024 pixels para tablets no modo paisagem
+Desktop: 1280 pixels ou mais para telas de desktop
+Extra grande: 1441 pixels ou mais para monitores ultra-wide ou de alta definição */
+
+/* Impressora */
+@media print {
+    body{
+        background-image: url('../imagens/back-print.jpg');
+    } 
+
+    img#telefone{
+        display: none;
+    }
+    
+    img#tablet{
+        display: none;
+    }
+    
+    img#impressão{
+        display: block;
+    }
+    
+    img#computador{
+        display: none;
+    }
+    
+    img#televisão{
+        display: none;
+    }
+}
+
+
+/* Tablet */
+
+@media screen and (min-width: 601px) and (max-width: 768px) {
+    body{
+        background-image: url('../imagens/back-tablet.jpg');
+    }
+    
+    img#telefone{
+        display: none;
+    }
+    
+    img#tablet{
+        display: block;
+    }
+    
+    img#impressão{
+        display: none;
+    }
+    
+    img#computador{
+        display: none;
+    }
+    
+    img#televisão{
+        display: none;
+    }
+    
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    body{
+        background-image: url('../imagens/back-tablet.jpg');
+    }
+
+    
+    img#telefone{
+        display: none;
+    }
+    
+    img#tablet{
+        display: block;
+    }
+    
+    img#impressão{
+        display: none;
+    }
+    
+    img#computador{
+        display: none;
+    }
+    
+    img#televisão{
+        display: none;
+    }
+}
+
+
+/* Monitores */
+
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
+        body{
+            background-image: url('../imagens/back-pc.jpg');
+        }
+    img#telefone{
+        display: none;
+    }
+    
+    img#tablet{
+        display: none;
+    }
+    
+    img#impressão{
+        display: none;
+    }
+    
+    img#computador{
+        display: block;
+    }
+    
+    img#televisão{
+        display: none;
+    }
+}
+
+@media screen and (min-width: 1281px) and (max-width: 1441px)  {
+    body{
+        background-image: url('../imagens/back-pc.jpg');
+    }
+    
+    img#telefone{
+        display: none;
+    }
+    
+    img#tablet{
+        display: none;
+    }
+    
+    img#impressão{
+        display: none;
+    }
+    
+    img#computador{
+        display: block;
+    }
+    
+    img#televisão{
+        display: none;
+    }
+}
+
+@media screen and (min-width: 1441px) {
+    body{
+        background-image:url('../imagens/back-tv.jpg');
+    }
+    
+    img#telefone{
+        display: none;
+    }
+    
+    img#tablet{
+        display: none;
+    }
+    
+    img#impressão{
+        display: none;
+    }
+    
+    img#computador{
+        display: none;
+    }
+    
+    img#televisão{
+        display: block;
+    }
+}
